add handy wallpaper
using below config file on VZH to define default wallpaper
$ cat /system/etc/wallpaper_config.xml
<?xml version="1.0" encoding="utf-8"?>
<Wallpaper>
    <project name="default">
        <sku id="default">
            <item name="ACTION_PARTNER_CUSTOMIZATION">com.evenwell.foxlauncher.action.PARTNER_CUSTOMIZATION</item>
            <item name="default_property">06</item>
            <mapping-wallpaper type="propertyWallpaper" value="01">wallpaper_color</mapping-wallpaper>
            <mapping-wallpaper type="propertyWallpaper" value="02">wallpaper_color</mapping-wallpaper>
            <mapping-wallpaper type="propertyWallpaper" value="04">wallpaper_color</mapping-wallpaper>
            <mapping-wallpaper type="propertyWallpaper" value="06">handy_wallpaper_01</mapping-wallpaper>
        </sku>
    </project>
</Wallpaper>

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -15,6 +15,6 @@
         <item>infocus_wallpaper_92</item>
         <item>infocus_wallpaper_93</item>
         <item>infocus_wallpaper_95</item>
-        <item>infocus_wallpaper_96</item>
+        <item>handy_wallpaper_01</item>
     </string-array>
 </resources>
