--- a/res/values/public.xml
+++ b/res/values/public.xml
@@ -28,8 +28,8 @@
     <public type="drawable" name="infocus_wallpaper_93_small" id="0x7f020019" />
     <public type="drawable" name="infocus_wallpaper_95" id="0x7f02001a" />
     <public type="drawable" name="infocus_wallpaper_95_small" id="0x7f02001b" />
-    <public type="drawable" name="infocus_wallpaper_96" id="0x7f02001c" />
-    <public type="drawable" name="infocus_wallpaper_96_small" id="0x7f02001d" />
+    <public type="drawable" name="handy_wallpaper_01" id="0x7f02001c" />
+    <public type="drawable" name="handy_wallpaper_01_small" id="0x7f02001d" />
     <public type="string" name="app_label" id="0x7f030000" />
     <public type="array" name="partner_wallpapers" id="0x7f040000" />
 </resources>
